# honitbicka-factory-antigravity

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: analyza_dsl_a_architektury.md  navrhy_vylepseni.md  rozhodnuti.md
engine/: DODATKY_3.4.md  SKILL.md
honbicka/: __init__.py  cli.py  davka.py  export.py  feedback.py  llm.py  modely.py  orchestrator.py  registr.py  scaffold.py  semantika.py  taxonomie.py
honbicka/sazba/: __init__.py  herni_list.py  karta_html.py  karty_pdf.py  obalka.py  pruvodce.py  render.py  styl.py
honbicka/validatory/: __init__.py  sazba.py  (+4 more)
hotove_hry/: honbicka-factory.lnk
mapy/: ctyri-svetla_30min.twee  ctyri-svetla_60min.twee  princezna-a-drak_30min_gpt20b.twee  princezna-a-drak_30min_ornith35b.twee  princezna-a-drak_30min_qwen27b.twee  princezna-a-drak_30min_qwen3-vl8b.twee  princezna-a-drak_60min_gpt20b.twee  princezna-a-drak_60min_ornith35b.twee  princezna-a-drak_60min_qwen27b.twee  princezna-a-drak_60min_qwen3-vl8b.twee  touch-grass-boj-o-preziti-v-realite_30min.twee  touch-grass-boj-o-preziti-v-realite_60min.twee
skiny/: registr.md
tests/: conftest.py  test_cli.py  test_davka.py  test_e2e_live.py  test_export.py  test_faze1.py  test_golden.py  test_llm.py  test_losovani.py  test_modely.py  test_registr.py  test_render_gtk.py  test_sazba.py  test_sazba_pdf.py  test_scaffold.py  test_simulace.py  test_skalovani.py  test_taxonomie.py  test_taxonomie_m6.py  test_topologie.py  test_vypravec.py  test_vypravec_volby.py  test_vyrob_hru.py
zadani/: hra.yaml  plan.yaml  princezna_drak.yaml  touch_grass.yaml
